8166742: SIGFPE in C2 Loop IV elimination

Reviewed-by: kvn